<resources>
    <string name="app_name">login</string>
    <string name="logo">logo</string>
    <string name="name">name</string>
    <string name="pass">pass</string>
    <string name="log_in">LOG IN</string>
    <string name="register">Register</string>
    <string name="confirm_pass">confirm pass</string>
    <string name="mail">mail</string>
    <string name="ground">ground</string>
    <string name="usuario">usuario</string>
    <string name="next">next</string>
    <string name="backClub"><![CDATA[<<]]></string>
    <string name="words">WORDS</string>
    <string name="images">IMAGES</string>
    <string name="chains">CHAINS</string>

    <string name="false_">FALSE</string>
    <string name="true_">TRUE</string>
    <string name="who">who</string>
</resources>