<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btWho"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btWho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/who"
        app:layout_constraintBottom_toTopOf="@+id/btImages"
        app:layout_constraintEnd_toEndOf="@+id/btWords"
        app:layout_constraintStart_toStartOf="@+id/btWords"
        app:layout_constraintTop_toBottomOf="@+id/btWords" />

    <Button
        android:id="@+id/btImages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/images"
        app:layout_constraintBottom_toTopOf="@+id/btBackMenu"
        app:layout_constraintTop_toBottomOf="@+id/btWho"
        app:layout_constraintEnd_toEndOf="@+id/btWords"
        app:layout_constraintStart_toStartOf="@+id/btWords" />

    <Button
        android:id="@+id/btChains"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chains"
        app:layout_constraintBottom_toTopOf="@+id/btBackMenu"
        app:layout_constraintEnd_toEndOf="@+id/btWords"
        app:layout_constraintStart_toStartOf="@+id/btWords"
        app:layout_constraintTop_toBottomOf="@+id/btImages" />

    <Button
        android:id="@+id/btBackMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backClub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btWords"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btWords"
        app:layout_constraintTop_toBottomOf="@+id/btChains" />

</androidx.constraintlayout.widget.ConstraintLayout>