<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClubActivity">

    <TextView
        android:id="@+id/tvRound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/iClub"
        app:layout_constraintEnd_toEndOf="@+id/iClub"
        app:layout_constraintStart_toStartOf="@+id/iClub"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ROUND 1" />

    <ImageView
        android:id="@+id/iClub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRound"

        app:layout_constraintBottom_toTopOf="@+id/tvPoints"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btBackClub"
        app:layout_constraintEnd_toEndOf="@+id/iClub"
        app:layout_constraintStart_toStartOf="@+id/iClub"
        app:layout_constraintTop_toBottomOf="@+id/iClub"
        tools:text="0 POINTS" />

    <TextView
        android:id="@+id/tvWordClub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/btBackClub"
        app:layout_constraintEnd_toStartOf="@+id/btNextClub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btBackClub"
        app:layout_constraintTop_toTopOf="@+id/btBackClub"
        tools:text="example" />

    <Button
        android:id="@+id/btNextClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/btBackClub"
        app:layout_constraintEnd_toEndOf="@+id/iClub"
        app:layout_constraintStart_toEndOf="@+id/tvWordClub"
        app:layout_constraintTop_toTopOf="@+id/btBackClub" />

    <Button
        android:id="@+id/btBackClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backClub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvWordClub"
        app:layout_constraintTop_toBottomOf="@+id/tvPoints"
        app:layout_constraintStart_toStartOf="@+id/iClub" />
</androidx.constraintlayout.widget.ConstraintLayout>